boilerplate/curd/kustomize/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curd-database
  labels:
    app: curd-database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: curd-database
    spec:
      containers:
        - name: postgresql
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: curd-database-volume
      volumes:
        - name: curd-database-volume
          persistentVolumeClaim:
            claimName: curd-database-claim
