boilerplate/curd/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: curd
  template:
    metadata:
      labels:
        app: curd
    spec:
      containers:
        - image: localhost:32000/curd:latest
          imagePullPolicy: Always
          name: curd
