boilerplate/curd/kustomize/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curd-database
spec:
  selector:
    app: curd-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
