boilerplate/curd/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curd
spec:
  selector:
    app: curd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
