boilerplate/curd/kustomize/virtual-service-db.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: curd-database
spec:
  hosts:
  - "*"
  gateways:
  - database-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: curd-database.default.svc.cluster.local
        port:
          number: 5432
