boilerplate/curd/kustomize/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: curd
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /api/curd/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: curd.default.svc.cluster.local
